scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/bedrock-egress-common-web-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: commonui
  name: egress-common-web-ui
  namespace: "csNamespace"
spec:
  podSelector:
    matchLabels:
      k8s-app: common-web-ui
  policyTypes:
  - Egress
  egress:
  - {}
