scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/bedrock-egress-cs-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: keycloak
  name: egress-cs-keycloak
  namespace: "csNamespace"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: "cs-keycloak"
  policyTypes:
  - Egress
  egress:
  - {}
