scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/bedrock-egress-ibm-postgres-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-postgres
  namespace: "csNamespace"
  labels:
    component: cpfs3
    service: ibm-pg
spec:
  podSelector:
    matchExpressions:
    - key: pg.ibm.com/cluster
      operator: Exists
  policyTypes:
  - Egress
  egress:
  - {}
