scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/bedrock-egress-oidc-client-registration.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-oidc-client-registration
  namespace: "csNamespace"
  labels:
    component: cpfs3
    service: iam
spec:
  podSelector:
    matchLabels:
      app: "oidc-client-registration"
  policyTypes:
  - Egress
  egress:
  - {}
