scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/bedrock-egress-pg-migration-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-pg-migration-job
  namespace: "csNamespace"
  labels:
    component: cpfs3
    service: ibm-pg
spec:
  podSelector:
    matchLabels:
      app: "cpfs-pg-migrator"
  policyTypes:
  - Egress
  egress:
  - {}
