scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/bedrock-egress-platform-auth-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-platform-auth-service
  namespace: "csNamespace"
  labels:
    component: cpfs3
    service: iam
spec:
  podSelector:
    matchLabels:
      k8s-app: "platform-auth-service"
  policyTypes:
  - Egress
  egress:
  - {}
