scripts/cpfs/installer_scripts/cp3-networkpolicy/egress/services/cpd-egress-cpd-mgmt-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-cpd-mgmt-server
  namespace: "zenNamespace"
  labels:
    component: cpfs3
    service: cpd-platform
spec:
  podSelector:
    matchLabels:
      app: cpd-mgmt
  policyTypes:
  - Egress
  egress:
  - {}
